<resources>
    <string name="app_name">Tatica</string>
    <string name="SC_logo">SC logo</string>
    <string name="input_username">Enter your mail address</string>
    <string name="input_password">Enter your password</string>
    <string name="welcome">welcome</string>
    <string name="create_acc">Create an account?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="login">login</string>
    <string name="welcome_to">Welcome to</string>
    <string name="pitime">Tatica</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="use_social_login">Log in with social networks</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="create_an_account">Create an account</string>
    <string name="account">Account</string>
    <string name="create">Create an</string>
    <string name="use_social_networks_signup">Use social networks</string>
    <string name="log_out">Log out</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="task_in_duration">Task In Duration</string>
    <string name="task_end_duration">Task End Duration</string>
    <string name="in_duration">In Duration</string>
    <string name="end_duration">End Duration</string>
    <string name="action_delete">Delete Task</string>
    <string name="action_archive">Finish Task</string>
    <string name="today_tab">Today\'s task</string>
    <string name="pomodoro_tab">Pomodoro</string>
    <string name="today_s_task">Today\'s task</string>
    <string name="you_will">you will work in</string>
    <string name="hour">hours</string>
    <string name="take_note">Take note</string>
    <string name="write_something">Write something</string>
    <string name="save">save</string>
    <string name="_4">4</string>
    <string name="title">Title</string>
    <string name="show_notes">show notes</string>
    <string name="description">Description</string>
    <string-array name="list_howLong">
        <item>55/5</item>
        <item>50/10</item>
        <item>45/15</item>
        <item>40/20</item>
        <item>5/5 (test)</item>
    </string-array>
    <string name="title_activity_first_time">FirstTimeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="tip0.1">"Hey! Don't skip breakfast" </string>
    <string name="tip0.2"> Do you know students who eat a healthy breakfast
        tend to have better concentration than students who skip breakfast altogether?</string>

    <string name="tip1.1">"Eggs are a good brain food" </string>
    <string name="tip1.2">Eggs contain vitamin B12 – which converts glucose into energy – and a nutrient called choline,
        which is linked to good memory.</string>

    <string name="tip2.1">"Drinking water increases your concentration" </string>
    <string name="tip2.2">Water provides the brain with the electrical it needs for all its function,
        including thought and memory processes.</string>

    <string name="bronze_rank">Bronze Rank</string>
    <string name="this_is_the_description_for_specific_rank">This is the description for specific rank.</string>
    <string name="userfriends">Friends</string>
    <string name="otherusers">Other Users</string>
</resources>