<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.LoginAccountActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="194dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="54dp"
        android:layout_toEndOf="@+id/imageView"
        android:fontFamily="@font/montserrat"
        android:text="@string/pitime"
        android:textColor="@color/SC_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="192dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="113dp"
        android:scaleType="fitCenter"
        android:src="@drawable/sc_logo"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="106dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="164dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="207dp"
        android:layout_marginEnd="82dp"
        android:layout_toEndOf="@+id/imageView"
        android:fontFamily="@font/montserrat"
        android:text="@string/welcome_to"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="163dp" />

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:hint="@string/input_username"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:hint="@string/input_password"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="310dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/forgot_password"
        android:textSize="12sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="480dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/log_in"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/use_social_login"
        android:textSize="12sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="135dp"
        android:backgroundTint="@color/red"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/google"
        android:textAllCaps="false" />


    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/create_an_account" />


</RelativeLayout>